Fixed some padding and alignment in mundana world side bar

--- a/static/css/themes/mundana.css
+++ b/static/css/themes/mundana.css
@@ -50,7 +50,7 @@ body a {
 }
 
 .worldSideBar > ul {
-  padding: 120px 0 0 20px;
+  padding: 120px 0 0 15px;
 }
 
 .worldSideBar li a {
